# passenger_flow_agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  Dockerfile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  compose.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
config/: assistant_capabilities.json  logical_data_products.json  production_promotion_gates.json  travel_routes.json
docs/: architecture.md  assistant_architecture.md  data_contract.md  database_and_forecast.md  developer_guide_cn.md  hermes_critique_resolution_20260721.md  index.md  metric_dictionary.md  mobile_miniprogram.md  open_source_reuse_assessment.md  p1_deterministic_loop.md  progress_since_02992ee.md  project_structure_cn.md  quickstart_cn.md  real_shadow_demo.md  sanitized_requirements.md  threat_model.md  user_guide_cn.md  web_and_deployment.md
examples/: assistant_gold_cases.json  semantic_expression_cases.json
schemas/: data_source_registry.schema.json  gold_case.schema.json  logical_data_product_registry.schema.json  production_promotion_gates.schema.json  query_ir.schema.json
scripts/: build_assistant_gold_cases.py  build_cloudbase_function.py  build_project_briefing_ppt.py  build_wechat_cloud_function.py  check_miniprogram.py  check_multiapp.py  evaluate_assistant.py  evaluate_gpt56_shadow.py  evaluate_live_gpt_shadow.py  evaluate_semantic_expressions.py  export_openapi.py  export_verified_dataset.py  manage_assistant_bridge.sh  manage_real_shadow.sh  prepare_live_shadow.py  run_live_launchd.sh  run_live_local.sh  run_scheduled_assistant.py  summarize_assistant_failures.py
tests/: test_api_app.py  test_api_service.py  test_assistant.py  test_cli.py  test_cloudbase_function.py  test_contracts.py  test_database.py  test_forecasting.py  (+6 more)
(+140 files in other folders)
