[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "metro-passenger-flow-agent"
version = "0.1.0"
description = "Governed metro passenger-flow query agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "Project team"}]
dependencies = []

[project.scripts]
metro-agent = "metro_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
