[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "metro-passenger-flow-agent"
version = "0.3.0"
description = "Governed metro passenger-flow query agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "Project team"}]
dependencies = [
    "fastapi>=0.115,<1",
    "pandas>=2.2,<3",
    "PyMySQL>=1.1,<2",
    "uvicorn>=0.34,<1",
]

[project.scripts]
metro-agent = "metro_agent.cli:main"
metro-agent-api = "metro_agent.api.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
